k8s/frontend-operator-app/linkerd-viz-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-ingress
  namespace: linkerd-viz
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "20"
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /linkerd
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
