k8s/frontend-operator-app/operator-ingress.yml
# Ingress 매니페스트

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operator-web-ingress
  namespace: operator-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: operator-app-coraza-waf@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: operator-app
                port:
                  number: 80
